# alternative

./: alternative  alternative.cabal  projections.yml
src/: Main.hs
